[2.0.10] structural and feature update
- major feature update:
  - add server feature, remove need for MAMP or any external
applications
  - add browser sync feature, remove need for live reload
- update README to reflect
- add config.php to resolve relative path-ing issue
- restructure Sass architecture, split into functional and structural
parts
- update tasking and configurations to dramatically reduce task
execution speeds
- rename main script to project script

--- a/assets/sass/functional.scss
+++ b/assets/sass/functional.scss
@@ -1,4 +1,4 @@
-// # base
+// # functional
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
@@ -12,7 +12,6 @@
 @import "base/tools/ruleset-builder";
 @import "base/tools/gradient-background-builder";
 @import "base/tools/material-shadow-builder";
-@import "base/tools/debug";
 
 // # configurations
 ////////////////////////////////////////////////////////////
@@ -89,35 +88,3 @@
 @import "base/properties/theme/opacity";
 @import "base/properties/theme/cursor";
 @import "base/properties/theme/transition-duration";
-
-
-// # element
-////////////////////////////////////////////////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////////////////////////////////////////////////
-
-@import "element/whirligig";
-@import "element/list";
-@import "element/counter-list";
-@import "element/form-date-input";
-@import "element/form-multi-input";
-@import "element/form-select";
-
-
-// # component
-////////////////////////////////////////////////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////////////////////////////////////////////////
-
-
-// # composition
-////////////////////////////////////////////////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////////////////////////////////////////////////
-
-
-// # page
-////////////////////////////////////////////////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////////////////////////////////////////////////
-
