--- a/assets/sass/structural.scss
+++ b/assets/sass/structural.scss
@@ -28,6 +28,7 @@
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 
+@import "element/absolute-center";
 @import "element/whirligig";
 @import "element/list";
 @import "element/counter-list";
@@ -39,6 +40,9 @@
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
+
+@import "component/loader";
+@import "component/nav";
 
 // # composition
 ////////////////////////////////////////////////////////////////////////////////////////////////////
