[2.1.6] Add object fit properties
- Update gitignore rules to correctly list nested sass files

--- a/assets/sass/functional.scss
+++ b/assets/sass/functional.scss
@@ -52,6 +52,8 @@
 @import "base/properties/layout/grid";
 @import "base/properties/layout/overflow";
 @import "base/properties/layout/pointer-events";
+@import "base/properties/layout/object-fit";
+@import "base/properties/layout/object-position";
 
 //////////////////////////////
 // # typography
