update default style configs

--- a/assets/sass/base/configurations/_layout.scss
+++ b/assets/sass/base/configurations/_layout.scss
@@ -7,66 +7,58 @@
 ////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////
 $screen-sizes: (
-  's': 40em,
-  'm': 60em,
-  'l': 80em,
-  // ...
+  's': 40rem,
+  'm': 60rem,
+  'l': 80rem,
 );
 
 $wraps: (
-  's': 40em,
-  'm': 60em,
-  'l': 80em,
-  // ...
+  's': 40rem,
+  'm': 60rem,
+  'l': 80rem,
 );
 
-$grids: 12; // ... 
+$grids: 12;
 
 // # positioning
 ////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////
 $z-indexes: (
-  // n1: -1,
   '0': 0,
   '1': 1,
   '2': 2,
   '3': 3,
-  // ...
+  '4': 4,
   '100': 100,
 );
 
 $moves: (
-  // 'n1': -1em,
   '0': 0,
-  '1': 1em,
-  '2': 2em,
-  // ...
+  '1': 1rem,
+  '2': 2rem,
 );
 
 // # spacing
 ////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////
 $margins: (
-  // 'n1': -0.25em,
   '0': 0,
-  '1': 0.25em,
-  '2': 0.5em,
-  '3': 1em,
-  '4': 2em,
-  '5': 4em,
-  '6': 8em,
-  '7': 16em,
-  // ...
+  '1': 0.25rem,
+  '2': 0.5rem,
+  '3': 1rem,
+  '4': 2rem,
+  '5': 4rem,
+  '6': 8rem,
+  '7': 16rem,
 );
 
 $paddings: (
   '0': 0,
-  '1': 0.25em,
-  '2': 0.5em,
-  '3': 1em,
-  '4': 2em,
-  '5': 4em,
-  '6': 8em,
-  '7': 16em,
-  // ...
+  '1': 0.25rem,
+  '2': 0.5rem,
+  '3': 1rem,
+  '4': 2rem,
+  '5': 4rem,
+  '6': 8rem,
+  '7': 16rem,
 );
