--- a/assets/sass/base/configurations/_typography.scss
+++ b/assets/sass/base/configurations/_typography.scss
@@ -14,12 +14,12 @@ $font-families: (
 );
 
 $type-scale: (
-  '1': 3em,
-  '2': 2.25em,
-  '3': 1.5em,
-  '4': 1.25em,
-  '5': 1em,
-  '6': 0.875em,
+  '1': 3rem,
+  '2': 2.25rem,
+  '3': 1.5rem,
+  '4': 1.25rem,
+  '5': 1rem,
+  '6': 0.875rem,
   // ...
 );
 
