update icon readme, add unit conversion sass tool, add default icon style

--- a/assets/sass/base/configurations/_layout.scss
+++ b/assets/sass/base/configurations/_layout.scss
@@ -1,21 +1,16 @@
-// # layout
-////////////////////////////////////////////////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////////////////////////////////////////////////
-
 // # container
 ////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////
 $screen-sizes: (
-  's': 40rem,
-  'm': 60rem,
-  'l': 80rem,
+  "s": 40rem,
+  "m": 60rem,
+  "l": 80rem
 );
 
 $wraps: (
-  's': 40rem,
-  'm': 60rem,
-  'l': 80rem,
+  "s": 40rem,
+  "m": 60rem,
+  "l": 80rem
 );
 
 $grids: 12;
@@ -24,41 +19,41 @@ $grids: 12;
 ////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////
 $z-indexes: (
-  '0': 0,
-  '1': 1,
-  '2': 2,
-  '3': 3,
-  '4': 4,
-  '100': 100,
+  "0": 0,
+  "1": 1,
+  "2": 2,
+  "3": 3,
+  "4": 4,
+  "100": 100
 );
 
 $moves: (
-  '0': 0,
-  '1': 1rem,
-  '2': 2rem,
+  "0": 0,
+  "1": 1rem,
+  "2": 2rem
 );
 
 // # spacing
 ////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////
 $margins: (
-  '0': 0,
-  '1': 0.25rem,
-  '2': 0.5rem,
-  '3': 1rem,
-  '4': 2rem,
-  '5': 4rem,
-  '6': 8rem,
-  '7': 16rem,
+  "0": 0,
+  "1": 0.25rem,
+  "2": 0.5rem,
+  "3": 1rem,
+  "4": 2rem,
+  "5": 4rem,
+  "6": 8rem,
+  "7": 16rem
 );
 
 $paddings: (
-  '0': 0,
-  '1': 0.25rem,
-  '2': 0.5rem,
-  '3': 1rem,
-  '4': 2rem,
-  '5': 4rem,
-  '6': 8rem,
-  '7': 16rem,
+  "0": 0,
+  "1": 0.25rem,
+  "2": 0.5rem,
+  "3": 1rem,
+  "4": 2rem,
+  "5": 4rem,
+  "6": 8rem,
+  "7": 16rem
 );
