--- a/assets/sass/base/tools/_list-extension.scss
+++ b/assets/sass/base/tools/_list-extension.scss
@@ -1,8 +1,3 @@
-// # list extension
-//////////////////////////////////////////////////////////////////////////////////////////
-//////////////////////////////////////////////////////////////////////////////////////////
-//////////////////////////////////////////////////////////////////////////////////////////
-
 // # concat-lists
 // {Function} returns a new merged list of multiple lists
 // -
@@ -14,7 +9,7 @@
 @function concat-lists($lists...) {
   $result: ();
   @each $list in $lists {
-    $result: join($result, $list, 'comma');
+    $result: join($result, $list, "comma");
   }
 
   @return $result;
