--- a/assets/sass/element/_counter-list.scss
+++ b/assets/sass/element/_counter-list.scss
@@ -1,18 +1,15 @@
-// # counter list
-//////////////////////////////////////////////////////////////////////////////////////////
-//////////////////////////////////////////////////////////////////////////////////////////
-//////////////////////////////////////////////////////////////////////////////////////////
-
 .ct-list {
-  // position: relative;
   counter-reset: custom-counter;
 }
 
 .ct-list__li {
+  display: table;
+  width: 100%;
+
   &::before {
     content: counter(custom-counter);
     counter-increment: custom-counter;
-    position: absolute;
-    left: 0;
+    display: table-cell;
+    vertical-align: baseline;
   }
 }
