--- a/assets/sass/element/_whirligig.scss
+++ b/assets/sass/element/_whirligig.scss
@@ -1,10 +1,5 @@
-// # whirligig
-//
 // Tobias Ahlin – SpinKit: cube grid
 // – https://github.com/tobiasahlin/SpinKit
-////////////////////////////////////////////////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////////////////////////////////////////////////
 
 .whirligig {
   // overflow: hidden;
@@ -40,9 +35,12 @@
 }
 
 @keyframes grid-scale-delay {
-  0%, 70%, 100% {
+  0%,
+  70%,
+  100% {
     transform: scale3D(1, 1, 1);
-  } 35% {
+  }
+  35% {
     transform: scale3D(0, 0, 1);
-  } 
+  }
 }
