--- a/assets/sass/structural.scss
+++ b/assets/sass/structural.scss
@@ -1,7 +1,11 @@
-// # structural
-////////////////////////////////////////////////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////////////////////////////////////////////////
+// # configurations
+////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////
+
+@import "base/configurations/layout";
+@import "base/configurations/typography";
+@import "base/configurations/theme";
+@import "base/configurations/reset";
 
 // # tools
 ////////////////////////////////////////////////////////////
@@ -13,23 +17,15 @@
 @import "base/tools/gradient-background-builder";
 @import "base/tools/material-shadow-builder";
 @import "base/tools/debug";
-
-// # configurations
-////////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////////
-
-@import "base/configurations/layout";
-@import "base/configurations/typography";
-@import "base/configurations/theme";
-@import "base/configurations/reset";
+@import "base/tools/unit-conversion";
 
 // # element
-////////////////////////////////////////////////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////
 
 @import "element/absolute-center";
 @import "element/whirligig";
+@import "element/icon";
 @import "element/list";
 @import "element/counter-list";
 @import "element/form-date-input";
@@ -37,19 +33,16 @@
 @import "element/form-select";
 
 // # component
-////////////////////////////////////////////////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////
 
 @import "component/loader";
 @import "component/nav";
 
 // # composition
-////////////////////////////////////////////////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////
 
 // # page
-////////////////////////////////////////////////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////
