--- a/assets/sass/element/_form-select.scss
+++ b/assets/sass/element/_form-select.scss
@@ -1,16 +1,9 @@
-// # form select
-//////////////////////////////////////////////////////////////////////////////////////////
-//////////////////////////////////////////////////////////////////////////////////////////
-//////////////////////////////////////////////////////////////////////////////////////////
-
 .select {
-  // position: relative;
-
   &::after {
     content: "\25bc";
     position: absolute;
     top: 50%;
-    right: map-get($paddings, '3');
+    right: map-get($paddings, "3");
     transform: translate(0, -50%);
     font-size: 0.5em;
   }
