--- a/assets/sass/base/tools/_unit-conversion.scss
+++ b/assets/sass/base/tools/_unit-conversion.scss
@@ -1,3 +1,23 @@
 @function rem($pixels, $context: $base-font-size) {
-  @return #{$pixels/$context}rem;
+  @if (unitless($pixels)) {
+    $pixels: $pixels * 1px;
+  }
+
+  @if (unitless($context)) {
+    $context: $context * 1px;
+  }
+
+  @return $pixels / $context * 1rem;
+}
+
+@function em($pixels, $context: $base-font-size) {
+  @if (unitless($pixels)) {
+    $pixels: $pixels * 1px;
+  }
+
+  @if (unitless($context)) {
+    $context: $context * 1px;
+  }
+
+  @return $pixels / $context * 1em;
 }
