--- a/assets/sass/structural.scss
+++ b/assets/sass/structural.scss
@@ -1,28 +1,21 @@
-// # configurations
-////////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////////
+// Sass method extensions
+@import "base/extensions/list";
+@import "base/extensions/map";
 
+// Project configurations
 @import "base/configurations/layout";
 @import "base/configurations/typography";
 @import "base/configurations/theme";
 @import "base/configurations/reset";
 
-// # tools
-////////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////////
-
-@import "base/tools/list-extension";
-@import "base/tools/map-extension";
+// Helper methods
 @import "base/tools/ruleset-builder";
 @import "base/tools/gradient-background-builder";
 @import "base/tools/material-shadow-builder";
 @import "base/tools/debug";
 @import "base/tools/unit-conversion";
 
-// # element
-////////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////////
-
+// Elements
 @import "element/absolute-center";
 @import "element/whirligig";
 @import "element/icon";
@@ -32,17 +25,6 @@
 @import "element/form-multi-input";
 @import "element/form-select";
 
-// # component
-////////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////////
-
+// Components
 @import "component/loader";
 @import "component/nav";
-
-// # composition
-////////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////////
-
-// # page
-////////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////////
